Step up to new preferred Base64 decoder API.